# rhel-lightspeed-evaluation

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
config/: system.yaml
config/evaluation_data/: pseudo_eval_data.yaml
config/registry/: geval_metrics.example.yaml
config/system/: system.example.yaml  system_with_panel.example.yaml
src/lightspeed_evaluation/core/api/: client.py
src/lightspeed_evaluation/core/models/: api.py  system.py
src/rhel_lightspeed_evaluation/: __init__.py  cli.py  runner.py
src/rhel_lightspeed_evaluation/extensions/: __init__.py  geval.py
src/rhel_lightspeed_evaluation/extensions/core/: constants.py
src/rhel_lightspeed_evaluation/extensions/core/api/: __init__.py  client.py
src/rhel_lightspeed_evaluation/extensions/core/llm/: __init__.py  deepeval.py
src/rhel_lightspeed_evaluation/extensions/core/metrics/: __init__.py  custom.py  deepeval.py  geval.py
src/rhel_lightspeed_evaluation/extensions/core/models/: __init__.py  api.py  data.py  system.py
src/rhel_lightspeed_evaluation/extensions/core/output/: __init__.py  generator.py
src/rhel_lightspeed_evaluation/extensions/core/system/: __init__.py  loader.py
src/rhel_lightspeed_evaluation/extensions/pipeline/evaluation/: __init__.py  evaluator.py  pipeline.py  processor.py
src/rhel_lightspeed_evaluation/extensions/runner/: __init__.py  evaluation.py
src/rhel_lightspeed_evaluation/models/: system_ext.py
src/rhel_lightspeed_evaluation/utils/: __init__.py  config_loader.py
tests/script/: test_compare_evaluations.py
tests/unit/core/system/: test_loader.py
