[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhel-lightspeed-evaluation"
version = "0.1.0"
description = "An evaluation project for RHEL Lightspeed using the LSC Evaluation Framework."
authors=[]
readme = "README.md"
license = {text = "Apache"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "deepeval>=3.6.9",
    "lightspeed-evaluation",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
rls-evaluate = "rhel_lightspeed_evaluation.extensions.runner.evaluation:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rhel_lightspeed_evaluation"]

[tool.uv.sources]
lightspeed-evaluation = { git = "https://github.com/lightspeed-core/lightspeed-evaluation", branch = "main" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
